--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,14 @@
 * {
   margin: 0;
 }
+
+.hide {
+  display: none;
+}
+
+.selected {
+  border: 2px solid var(--darkblue);
+}
   
 body {
   background-color: var(--darkblue);
@@ -58,7 +66,49 @@ button:hover {
 main {
   flex: 1;
   background-color: var(--lightblue);
+  display: flex;
+  flex-direction: column;
 }
+
+.nav-book-library {
+  width: 90%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-bottom: 1px solid var(--darkblue);
+}
+
+.filter-buttons {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.search-box {
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.search-box svg {
+  height: 1rem;
+  width: 1rem;
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  transform: translateY(-50%);
+}
+
+.search-box input {
+  width: 100%;
+  margin: 0;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  background-color: var(--white);
+}
+
 .book-library {
   width: 90%;
   margin: 2rem auto;
@@ -121,14 +171,14 @@ form {
   font-weight: bold;
 }
 
-label {
+dialog label {
   font-variant: small-caps;
   color: var(--darkblue);
 }
 
-input {
+dialog input {
   margin-bottom: 1rem;
-  padding: 0.5rem 0;
+  padding: 0.5rem;
   background-color: var(--white);
 }
 
@@ -141,11 +191,23 @@ input {
   }
   .book-library {
       justify-content: space-between;
-      /* width: 85%; */
   }
   .book {
       width: 42%;
       border-left: 1rem solid var(--darkblue);
+  }
+  .nav-book-library {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem 0;
+  }
+  .filter-buttons {
+    width: 50%;
+    margin: 0;
+  }
+  .search-box {
+    width: 30%;
+    margin: 0;
   }
 }
 
